Cleanup storyboard background rendering.

Reduced code repitition, added more safety to ensure that frames
were never unnecessarily rendered (when storyboard docker is empty.)

BUG:435281